Fixed overlapping chart issue

--- a/index.css
+++ b/index.css
@@ -189,6 +189,7 @@ div.tooltip {
 /* D3 Chart */
 .bar-chart-hover {
     opacity: 0.5;
+    cursor: pointer;
 }
 
 th {
